--- a/app/src/main/res/layout/beer_entry_recycler_item.xml
+++ b/app/src/main/res/layout/beer_entry_recycler_item.xml
@@ -3,11 +3,15 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/beer_name"
-        style="@style/beer_name"
+    <com.lucasurbas.listitemview.ListItemView
+        android:id="@+id/beer_item_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_purple" />
+        app:liv_title="@string/beer_name"
+        app:liv_subtitle="@string/beer_name"
+        app:liv_multiline="false"
+        app:liv_displayMode="icon"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android" />
 
 </LinearLayout>
