--- a/app/src/main/res/layout/beer_entry_recycler_item.xml
+++ b/app/src/main/res/layout/beer_entry_recycler_item.xml
@@ -11,7 +11,6 @@
         app:liv_subtitle="@string/beer_name"
         app:liv_multiline="false"
         app:liv_displayMode="icon"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android" />
+        xmlns:app="http://schemas.android.com/apk/res-auto" />
 
 </LinearLayout>
