--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,14 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/delete_selected"
+        android:orderInCategory="101"
+        android:title="@string/delete_selected_entries"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/delete_all"
+        android:orderInCategory="102"
+        android:title="@string/delete_all_entries"
+        app:showAsAction="never" />
 </menu>
