--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/darker_gray"
+        android:background="@android:color/background_dark"
         tools:listitem="@layout/beer_entry_recycler_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
