--- a/app/src/main/res/menu/single_entry_menu.xml
+++ b/app/src/main/res/menu/single_entry_menu.xml
@@ -4,5 +4,6 @@
     <item
         android:id="@+id/single_item_menu_action_delete"
         android:title="@string/action_remove_single_entry"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_delete_white_24dp"
+        app:showAsAction="always" />
 </menu>
