--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#6A5ACD</color>
+    <color name="colorPrimaryDark">#483D8B</color>
+    <color name="colorAccent">#DA70D6</color>
     <color name="buttonLabel">#d3d3d3</color>
 </resources>
