--- a/app/src/main/res/layout/beer_entry_recycler_item.xml
+++ b/app/src/main/res/layout/beer_entry_recycler_item.xml
@@ -1,17 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="10dp">
 
-    <com.lucasurbas.listitemview.ListItemView
-        android:id="@+id/beer_item_view"
-        android:layout_width="match_parent"
+
+    <TextView
+        android:id="@+id/beer_name_text_view"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:liv_title="@string/beer_name"
-        app:liv_subtitle="@string/beer_name"
-        app:liv_multiline="false"
-        app:liv_displayMode="standard"
-        app:liv_menu="@menu/single_entry_menu"
-        xmlns:app="http://schemas.android.com/apk/res-auto" />
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/app_name"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.153" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/beer_subtitle_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/app_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/beer_name_text_view"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/beer_entry_delete_button"
+        android:layout_width="37dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@android:color/transparent"
+        app:srcCompat="@drawable/ic_delete_white_24dp" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
