--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,9 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="backgroundColor">@android:color/background_dark</item>
+        <item name="android:textColor">@android:color/primary_text_dark</item>
     </style>
 
     <style name="AppTheme.Dark" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -13,6 +16,9 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="backgroundColor">@android:color/background_dark</item>
+        <item name="android:textColor">@android:color/primary_text_dark</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
